src/objects/PegaEmailServiceQueue__c/PegaEmailServiceQueue__c.object-meta.xml
<CustomObject>
    <label>Pega Email Service Queue</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>PegaEmailServiceQueue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PegaEmailServiceQueues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>