src/objects/PegaEmailServiceQueue__c/fields/Bcc_Address__c.field-meta.xml
<CustomField>
    <fullName>Bcc_Address__c</fullName>
    <label>Bcc Address</label>
    <type>Email</type>
</CustomField>