src/objects/PegaEmailServiceQueue__c/fields/CC_Address__c.field-meta.xml
<CustomField>
    <fullName>CC_Address__c</fullName>
    <label>CC Address</label>
    <type>Email</type>
</CustomField>