src/objects/PegaEmailServiceQueue__c/fields/Email_Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Message_Id__c</fullName>
    <label>Email Message Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>