src/objects/PegaEmailServiceQueue__c/fields/Html_Body__c.field-meta.xml
<CustomField>
    <fullName>Html_Body__c</fullName>
    <label>Html Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>