src/objects/PegaEmailServiceQueue__c/fields/Pega_Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Pega_Case_Id__c</fullName>
    <description>Particular Id of the Email Record</description>
    <label>Pega Case Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>