src/objects/PegaEmailServiceQueue__c/fields/To_Address__c.field-meta.xml
<CustomField>
    <fullName>To_Address__c</fullName>
    <label>To Address</label>
    <type>Email</type>
</CustomField>